<resources>
    <string name="app_name">Todo</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="category">Category</string>
    <string name="history">History</string>
    <string name="communicate">Communicate</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="add_task">Add Task</string>
    <string name="settings">Settings</string>
    <string name="action_done">Done</string>
    <string name="task_title">Task Title</string>
    <string name="enter_task_title">Enter task title</string>
    <string name="what_is_to_be_done">What is to be done?</string>
    <string name="enter_your_task">Enter your task</string>
    <string name="set_date_and_time">Set reminder date and time</string>
    <string name="add_to_category">Add to category</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="add_category">Add Category</string>
    <string name="enter_category">Enter category</string>
    <string name="update_category">Update Category</string>
    <string name="please_add_task">Please add task</string>
    <string name="please_add_title">Please add title</string>
    <string name="please_add_category">Please add a category</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="category_added">Category Added</string>
    <string name="please_enter_category_to_add">Please enter category to add</string>
    <string name="update">UPDATE</string>
    <string name="category_updated">Category updated</string>
    <string name="please_edit_category_to_update">Please edit category to update</string>
    <string name="delete">DELETE</string>
    <string name="category_deleted">Category deleted</string>
    <string name="please_enter_something_to_update">Please enter something to update</string>
    <string name="no_category_to_display">No category to display</string>
    <string name="no_task_to_show">No task to show</string>
    <string name="no_history_to_show">No History to show</string>
    <string name="do_you_want_to_save_this_task">Do you want to save this task?</string>
    <string name="save_task">Save task!</string>
    <string name="save">SAVE</string>
    <string name="please_click_again_to_exit">Please click again to exit</string>
    <string name="skip"><![CDATA[Skip>>]]></string>
    <string name="get_started">Get started</string>
    <string name="delete_category">Delete Category</string>
    <string name="delete_category_confimation">Do you want to delete this category?</string>
    <string name="deleted_tasks">Deleted Tasks</string>
    <string name="no_category_found">No category added</string>
    <string name="no_category__added">No category added</string>

</resources>
