<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:checked="true"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_deleted_task"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/deleted_tasks" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_rate_us"
                android:icon="@drawable/ic_star_black_24dp"
                android:title="@string/rate_us" />
            <item
                android:id="@+id/nav_share_app"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/share_app" />
        </menu>
    </item>

</menu>
